<resources>
    <string name="app_name">Our Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="payments">Payments</string>
    <string name="booking_details">Booking Details</string>
    <string name="choose_an_availabe_date">Choose an availabe date</string>
    <string name="title_activity_booking_details">BookingDetails</string>
    <string name="enter_the_booking_details_below">Enter the booking details below</string>
    <string name="booking_date">Booking Date</string>
    <string name="button">Button</string>
    <string name="enter_the_payment_details_below">Enter the payment details below</string>
    <string name="name_on_card">Name on Card</string>
    <string name="example_mr_ali_mohammad">Example: Mr Ali Mohammad</string>
    <string name="card_number">Card Number</string>
    <string name="card_expire_date">Card Expire Date</string>
    <string name="cvc">CVC</string>
    <string name="book_now">Book Now</string>
</resources>