<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

 <Button
     android:id="@+id/button_first"
     android:layout_width="190dp"
     android:layout_height="wrap_content"
     android:layout_marginStart="32dp"
     android:layout_marginLeft="32dp"
     android:layout_marginEnd="32dp"
     android:layout_marginRight="32dp"
     android:text="@string/next"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.414"
     app:layout_constraintStart_toStartOf="parent" />

 <TextView
     android:id="@+id/textView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginStart="16dp"
     android:layout_marginLeft="16dp"
     android:layout_marginTop="28dp"
     android:layout_marginEnd="242dp"
     android:layout_marginRight="242dp"
     android:fontFamily="@font/roboto_bold"
     android:text="@string/choose_an_availabe_date"
     android:textSize="18sp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.0"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent" />

 <EditText
     android:id="@+id/editTextDate"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginStart="38dp"
     android:layout_marginLeft="38dp"
     android:layout_marginTop="6dp"
     android:layout_marginEnd="163dp"
     android:layout_marginRight="163dp"
     android:layout_marginBottom="18dp"
     android:autofillHints=""
     android:ems="10"
     android:inputType="date"
     app:layout_constraintBottom_toTopOf="@+id/textView2"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.0"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/textView" />

 <TextView
     android:id="@+id/textView2"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginStart="16dp"
     android:layout_marginLeft="16dp"
     android:layout_marginEnd="333dp"
     android:layout_marginRight="333dp"
     android:layout_marginBottom="11dp"
     android:text="@string/payments"
     app:layout_constraintBottom_toTopOf="@+id/textView3"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

 <TextView
     android:id="@+id/textView3"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginStart="16dp"
     android:layout_marginLeft="16dp"
     android:layout_marginTop="8dp"
     android:layout_marginEnd="305dp"
     android:layout_marginRight="305dp"
     android:layout_marginBottom="1dp"
     android:text="@string/name_on_card"
     app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/textView2" />

 <TextView
     android:id="@+id/textView4"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginStart="14dp"
     android:layout_marginLeft="14dp"
     android:layout_marginTop="4dp"
     android:layout_marginBottom="2dp"
     android:text="Card Number"
     app:layout_constraintBottom_toTopOf="@+id/editTextNumber"
     app:layout_constraintEnd_toStartOf="@+id/editTextNumber"
     app:layout_constraintHorizontal_bias="0.0"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

 <TextView
     android:id="@+id/textView5"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginStart="16dp"
     android:layout_marginLeft="16dp"
     android:layout_marginTop="9dp"
     android:layout_marginEnd="324dp"
     android:layout_marginRight="324dp"
     android:layout_marginBottom="6dp"
     android:text="Expire Date"
     app:layout_constraintBottom_toTopOf="@+id/editTextDate2"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

 <TextView
     android:id="@+id/textView6"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginStart="24dp"
     android:layout_marginLeft="24dp"
     android:layout_marginTop="40dp"
     android:layout_marginEnd="2dp"
     android:layout_marginRight="2dp"
     android:text="CVC"
     app:layout_constraintEnd_toStartOf="@+id/editTextDate2"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/textView5" />

 <EditText
     android:id="@+id/editTextTextPersonName"
     android:layout_width="189dp"
     android:layout_height="38dp"
     android:layout_marginStart="14dp"
     android:layout_marginLeft="14dp"
     android:layout_marginTop="2dp"
     android:layout_marginEnd="188dp"
     android:layout_marginRight="188dp"
     android:ems="10"
     android:inputType="textPersonName"
     android:text="Ex: Ali Mohammad"
     app:layout_constraintBottom_toTopOf="@+id/editTextNumber"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/textView3" />

 <EditText
     android:id="@+id/editTextNumber"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginStart="14dp"
     android:layout_marginLeft="14dp"
     android:layout_marginEnd="187dp"
     android:layout_marginRight="187dp"
     android:layout_marginBottom="9dp"
     android:ems="10"
     android:inputType="number"
     app:layout_constraintBottom_toTopOf="@+id/textView5"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/textView4" />

 <EditText
     android:id="@+id/editTextDate2"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginStart="1dp"
     android:layout_marginLeft="1dp"
     android:layout_marginTop="6dp"
     android:layout_marginEnd="185dp"
     android:layout_marginRight="185dp"
     android:layout_marginBottom="6dp"
     android:ems="10"
     android:inputType="date"
     app:layout_constraintBottom_toTopOf="@+id/editTextNumber2"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toEndOf="@+id/textView5"
     app:layout_constraintTop_toBottomOf="@+id/textView5" />

 <EditText
     android:id="@+id/editTextNumber2"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginStart="24dp"
     android:layout_marginLeft="24dp"
     android:layout_marginTop="2dp"
     android:layout_marginEnd="3dp"
     android:layout_marginRight="3dp"
     android:layout_marginBottom="3dp"
     android:ems="10"
     android:inputType="number"
     app:layout_constraintBottom_toTopOf="@+id/button_first"
     app:layout_constraintEnd_toStartOf="@+id/button_first"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>